<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/total_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="center"
        tools:text="@string/format_total_sales"/>

    <TextView
        android:id="@+id/current_pool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="center"
        tools:text="@string/format_pool"/>

    <TableLayout
        android:id="@+id/table_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="40dip"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/grey">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:text="@string/level"/>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/num"/>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/piece"/>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/send_money"/>

        </LinearLayout>

       <!-- <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/cell_shape"
                android:text="一等奖">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text="基本" >
            </TextView>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="3" >
            </TextView>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="12312312" >
            </TextView>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="123123123" >
            </TextView>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="追加" >
            </TextView>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="3" >
            </TextView>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="12312312" >
            </TextView>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="123123123" >
            </TextView>
        </TableRow>-->
    </TableLayout>

</LinearLayout>